<resources>
    <string name="app_name">Save The City</string>
    <string name="title_tips">Learn</string>
    <string name="title_recyclegame">Recycle Game</string>
    <string name="title_playscreen">Play</string>
    <string name="title_city">City</string>
    <string name="title_lightsgame">Lights Game</string>
    <string name="title_activity_fishgame">fishgameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_lightsgame">LightsgameActivity</string>
    <string name="title_activity_recyclegame">RecyclegameActivity</string>
    <string name="title_activity_fish_game_win">FishGameWin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>