<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/lightsgame">

    <fragment
        android:id="@+id/navigation_tips"
        android:name="com.citysavers.savethecity.ui.tips.TipsFragment"
        android:label="@string/title_tips"
        tools:layout="@layout/fragment_tips" />

    <fragment
        android:id="@+id/recyclegame"
        android:name="com.citysavers.savethecity.ui.recyclegame.RecyclegameFragment"
        android:label="@string/title_recyclegame"
        tools:layout="@layout/fragment_recyclegame" />

    <fragment
        android:id="@+id/lightsgame"
        android:name="com.citysavers.savethecity.ui.lightsgame.LightsgameFragment"
        android:label="@string/title_lightsgame"
        tools:layout="@layout/fragment_lightsgame" />

    <fragment
        android:id="@+id/navigation_playscreen"
        android:name="com.citysavers.savethecity.ui.playscreen.PlayscreenFragment"
        android:label="@string/title_playscreen"
        tools:layout="@layout/fragment_playscreen" />

    <fragment
        android:id="@+id/navigation_city"
        android:name="com.citysavers.savethecity.ui.city.CityFragment"
        android:label="@string/title_city"
        tools:layout="@layout/fragment_city" />
</navigation>